# ChokePoint

./: .gitignore  .pre-commit-config.yaml  Architecture.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_TREE.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  ci-validation.md  docker-compose-parser.md  enrichment.md  exports.md  graph-engine.md  release-candidate-report.md  repository-scanner.md  risk-engine.md  technical-debt.md  terraform-parser.md  yaml-parser.md
examples/: README.md  basic.yaml
scripts/: smoke_install.py
src/blastradius/: __init__.py  __main__.py
src/blastradius/cli/: __init__.py  app.py
src/blastradius/graph/: __init__.py  diff.py  engine.py
src/blastradius/models/: __init__.py  topology.py
src/blastradius/parser/: __init__.py  docker_compose_parser.py  repository_scanner.py  terraform_parser.py  yaml_parser.py
src/blastradius/report/: __init__.py  export.py  generator.py  risk.py
src/blastradius/utils/: __init__.py  text.py
src/blastradius/visualization/: __init__.py
src/chokepoint/: __main__.py
src/chokepoint/cli/: app.py
src/chokepoint/parser/: __init__.py  docker_compose_parser.py  repository_scanner.py
src/chokepoint/report/: __init__.py  export.py  generator.py  risk.py
src/chokepoint/utils/: __init__.py  text.py
src/chokepoint/visualization/: __init__.py
tests/: conftest.py  test_cli.py  test_docker_compose_parser.py  test_examples.py  test_graph_engine.py  test_imports.py  test_report_generator.py  test_repository_scanner.py  test_risk_engine.py  test_terraform_parser.py  test_topology_models.py  test_yaml_parser.py
